@@ -1401,9 +1401,9 @@ class GroupPresentation : public Output<GroupPresentation> {
          *
          * \tparam index the number \a k in the description above; in other
          * words, the index of the resulting subgroups.  Currently this
-         * must be between 2 and 7 inclusive; this range is chosen because
-         * those are the \a k for which Regina's permutation class Perm<k>
-         * is highly optimised.
+         * must be between 2 and 9 inclusive; this range is limited because
+         * some of the cached precomputations can become expensive for
+         * larger indices.
          * \param action a function (or other callable object) to call
          * for each representation that is found.
          * \param args any additional arguments that should be passed to
